# simple-games

./: compile.sh  meson.build  run.sh
src/: main.c  pong.c  screen.h  tictactoe.c
